{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 280,
  "lineage": "1f365448-76dd-8748-4766-3bae3fac918f",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "webapp-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/loadBalancers/webapp-lb/frontendIPConfigurations/webapp-lb-front-publicIP",
                "name": "webapp-lb-front-publicIP",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/publicIPAddresses/webapp-lb-publicIP-1"
              }
            ],
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/loadBalancers/webapp-lb",
            "location": "eastus",
            "name": "webapp-lb",
            "resource_group_name": "webapp-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.webapp-lb-publicIP",
            "azurerm_resource_group.webapp-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "webapp-lb-bap",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/loadBalancers/webapp-lb/backendAddressPools/webapp-lb-bap",
            "loadbalancer_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/loadBalancers/webapp-lb",
            "name": "webapp-lb-bap"
          },
          "dependencies": [
            "azurerm_availability_set.webapp_vm_as",
            "azurerm_lb.webapp-lb",
            "azurerm_public_ip.webapp-lb-publicIP",
            "azurerm_resource_group.webapp-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "webapp-lb-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/loadBalancers/webapp-lb/frontendIPConfigurations/webapp-lb-front-publicIP",
            "frontend_ip_configuration_name": "webapp-lb-front-publicIP",
            "frontend_port": 80,
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/loadBalancers/webapp-lb/loadBalancingRules/webapp-lb-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/loadBalancers/webapp-lb",
            "name": "webapp-lb-rule",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_availability_set.webapp_vm_as",
            "azurerm_lb.webapp-lb",
            "azurerm_public_ip.webapp-lb-publicIP",
            "azurerm_resource_group.webapp-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "webapp-nic-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/networkInterfaces/webapp-nic-1",
            "internal_domain_name_suffix": "nwu5ebfdei0ebarsoaj3taeknb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Internal-1",
                "primary": true,
                "private_ip_address": "10.123.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/virtualNetworks/webapp-vn/subnets/webapp-sb"
              }
            ],
            "location": "eastus",
            "name": "webapp-nic-1",
            "private_ip_address": "10.123.0.5",
            "private_ip_addresses": [
              "10.123.0.5"
            ],
            "resource_group_name": "webapp-rg"
          },
          "dependencies": [
            "azurerm_resource_group.webapp-rg",
            "azurerm_subnet.webapp-sb",
            "azurerm_virtual_network.webapp-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "webapp-nic-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/networkInterfaces/webapp-nic-2",
            "internal_domain_name_suffix": "nwu5ebfdei0ebarsoaj3taeknb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Internal-2",
                "primary": true,
                "private_ip_address": "10.123.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/virtualNetworks/webapp-vn/subnets/webapp-sb"
              }
            ],
            "location": "eastus",
            "name": "webapp-nic-2",
            "private_ip_address": "10.123.0.4",
            "private_ip_addresses": [
              "10.123.0.4"
            ],
            "resource_group_name": "webapp-rg"
          },
          "dependencies": [
            "azurerm_resource_group.webapp-rg",
            "azurerm_subnet.webapp-sb",
            "azurerm_virtual_network.webapp-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "backendpool_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/loadBalancers/webapp-lb/backendAddressPools/webapp-lb-bap",
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/networkInterfaces/webapp-nic-1/ipConfigurations/Internal-1|/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/loadBalancers/webapp-lb/backendAddressPools/webapp-lb-bap",
            "ip_configuration_name": "Internal-1",
            "network_interface_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/networkInterfaces/webapp-nic-1"
          },
          "dependencies": [
            "azurerm_availability_set.webapp_vm_as",
            "azurerm_lb.webapp-lb",
            "azurerm_lb_backend_address_pool.webapp-lb-bap",
            "azurerm_network_interface.webapp-nic-1",
            "azurerm_public_ip.webapp-lb-publicIP",
            "azurerm_resource_group.webapp-rg",
            "azurerm_subnet.webapp-sb",
            "azurerm_virtual_network.webapp-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "backendpool_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/loadBalancers/webapp-lb/backendAddressPools/webapp-lb-bap",
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/networkInterfaces/webapp-nic-2/ipConfigurations/Internal-2|/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/loadBalancers/webapp-lb/backendAddressPools/webapp-lb-bap",
            "ip_configuration_name": "Internal-2",
            "network_interface_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/networkInterfaces/webapp-nic-2"
          },
          "dependencies": [
            "azurerm_availability_set.webapp_vm_as",
            "azurerm_lb.webapp-lb",
            "azurerm_lb_backend_address_pool.webapp-lb-bap",
            "azurerm_network_interface.webapp-nic-2",
            "azurerm_public_ip.webapp-lb-publicIP",
            "azurerm_resource_group.webapp-rg",
            "azurerm_subnet.webapp-sb",
            "azurerm_virtual_network.webapp-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "webapp-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/networkSecurityGroups/webapp-nsg",
            "location": "eastus",
            "name": "webapp-nsg",
            "resource_group_name": "webapp-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.webapp-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "webapp-nsr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/networkSecurityGroups/webapp-nsg/securityRules/webapp-nsr",
            "name": "webapp-nsr",
            "network_security_group_name": "webapp-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "webapp-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "80",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.webapp-nsg",
            "azurerm_resource_group.webapp-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "webapp-lb-publicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/publicIPAddresses/webapp-lb-publicIP-1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "webapp-lb-publicIP-1",
            "resource_group_name": "webapp-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.webapp-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "webapp-sb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/virtualNetworks/webapp-vn/subnets/webapp-sb",
            "name": "webapp-sb",
            "resource_group_name": "webapp-rg",
            "virtual_network_name": "webapp-vn"
          },
          "dependencies": [
            "azurerm_resource_group.webapp-rg",
            "azurerm_virtual_network.webapp-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "webapp-nsga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/virtualNetworks/webapp-vn/subnets/webapp-sb",
            "network_security_group_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/networkSecurityGroups/webapp-nsg",
            "subnet_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/virtualNetworks/webapp-vn/subnets/webapp-sb"
          },
          "dependencies": [
            "azurerm_network_security_group.webapp-nsg",
            "azurerm_resource_group.webapp-rg",
            "azurerm_subnet.webapp-sb",
            "azurerm_virtual_network.webapp-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "webapp-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "04f2a96d-22a3-4034-8232-7013d9808a69",
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/webapp-rg/providers/Microsoft.Network/virtualNetworks/webapp-vn",
            "location": "eastus",
            "name": "webapp-vn",
            "resource_group_name": "webapp-rg"
          },
          "dependencies": [
            "azurerm_resource_group.webapp-rg"
          ]
        }
      ]
    }
  ]
}